Fix to main containers so that the app view won't overflow

--- a/src/components/postList.module.css
+++ b/src/components/postList.module.css
@@ -4,5 +4,4 @@
 
 .listContainer {
 	list-style-type: none;
-	border: 2px solid magenta;
 }
