--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,11 +1,9 @@
 
 .container {
 	display: grid;
-	left: 0;
-	width: 100%;
 	grid-template-columns: repeat( 3, 1fr );
-	grid-gap: 10px;
-		border: 2px solid green;
+	grid-gap: 5px;
+	border: 2px solid green;
 }
 
 .cellItem {
@@ -16,7 +14,6 @@
 .navWrapper {
 	width: 100%;
 	height: 100px;
-	border: 2px solid black;
 }
 
 .postsContainer {
@@ -32,11 +29,9 @@
 @media screen and (min-width: 960px) {
 	.cellItem:nth-child(2) {
 		grid-column: span 2;
-		border: 2px solid pink;
 	}
 
 	.cellItem:nth-child(3) {
 		grid-column: span 1;
-		border: 2px solid blue;
 	}
 }
